[gd_scene load_steps=2 format=2]

[ext_resource path="res://gameUI/gamePause/codes/gamePause.gd" type="Script" id=1]

[node name="gamePause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="back_ground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.129412 )

[node name="content" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -55.0
margin_right = 132.5
margin_bottom = 55.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 6
custom_constants/separation = 10
alignment = 1

[node name="text" type="Label" parent="content"]
margin_right = 265.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 6
text = "Game Pause"
align = 1
valign = 1

[node name="restart_room" type="Button" parent="content"]
margin_left = 82.0
margin_top = 60.0
margin_right = 182.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart Room"
__meta__ = {
"_editor_description_": ""
}

[node name="back_to_game" type="Button" parent="content"]
margin_left = 82.0
margin_top = 90.0
margin_right = 182.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back to game"

[node name="back_to_main" type="Button" parent="content"]
visible = false
margin_left = 82.0
margin_top = 120.0
margin_right = 182.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Go to main"

[connection signal="pressed" from="content/restart_room" to="." method="_on_restart_room_pressed"]
[connection signal="pressed" from="content/back_to_game" to="." method="_on_back_to_game_pressed"]
[connection signal="pressed" from="content/back_to_main" to="." method="_on_back_to_main_pressed"]
